--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.example.cloudsim.demo</groupId>
-    <artifactId>demo</artifactId>
+    <groupId>energy.Blockchain</groupId>
+    <artifactId>energy.Blockchain</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -18,6 +18,11 @@
             <groupId>org.cloudsimplus</groupId>
             <artifactId>cloudsimplus</artifactId>
             <version>8.5.5</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
         </dependency>
     </dependencies>
 </project>
