--- a/src/main/resources/config2.json
+++ b/src/main/resources/config2.json
@@ -1,28 +1,223 @@
 {
     "SCHEDULING_INTERVAL": 1.0,
-    "CLOUDLET_LENGTH": 5000000,  
-    "CLOUDLET_PES": 4,
-    "CLOUDLETS": 130,
 
     "DATACENTERS": [
-        { "name": "Datacenter1", "hosts": 50, "HOST_PES": 128, "HOST_MIPS": 2000000, "HOST_RAM": 65536, "HOST_BW": 5000000, "HOST_STORAGE": 200000000000 },
-        { "name": "Datacenter2", "hosts": 60, "HOST_PES": 64, "HOST_MIPS": 1500000, "HOST_RAM": 50000, "HOST_BW": 4000000, "HOST_STORAGE": 180000000000 },
-        { "name": "Datacenter3", "hosts": 70, "HOST_PES": 48, "HOST_MIPS": 1200000, "HOST_RAM": 40000, "HOST_BW": 3500000, "HOST_STORAGE": 160000000000 },
-        { "name": "Datacenter4", "hosts": 80, "HOST_PES": 32, "HOST_MIPS": 1000000, "HOST_RAM": 32768, "HOST_BW": 3000000, "HOST_STORAGE": 140000000000 },
-        { "name": "Datacenter5", "hosts": 90, "HOST_PES": 24, "HOST_MIPS": 800000, "HOST_RAM": 25000, "HOST_BW": 2500000, "HOST_STORAGE": 120000000000 },
-        { "name": "Datacenter6", "hosts": 100, "HOST_PES": 16, "HOST_MIPS": 600000, "HOST_RAM": 20000, "HOST_BW": 2000000, "HOST_STORAGE": 100000000000 },
-        { "name": "Datacenter7", "hosts": 110, "HOST_PES": 12, "HOST_MIPS": 500000, "HOST_RAM": 18000, "HOST_BW": 1800000, "HOST_STORAGE": 90000000000 },
-        { "name": "Datacenter8", "hosts": 120, "HOST_PES": 8, "HOST_MIPS": 400000, "HOST_RAM": 15000, "HOST_BW": 1600000, "HOST_STORAGE": 80000000000 },
-        { "name": "Datacenter9", "hosts": 130, "HOST_PES": 6, "HOST_MIPS": 300000, "HOST_RAM": 12000, "HOST_BW": 1400000, "HOST_STORAGE": 70000000000 },
-        { "name": "Datacenter10", "hosts": 140, "HOST_PES": 4, "HOST_MIPS": 200000, "HOST_RAM": 10000, "HOST_BW": 1200000, "HOST_STORAGE": 60000000000 },
-        { "name": "Datacenter11", "hosts": 150, "HOST_PES": 2, "HOST_MIPS": 150000, "HOST_RAM": 8000, "HOST_BW": 1000000, "HOST_STORAGE": 50000000000 },
-        { "name": "Datacenter12", "hosts": 160, "HOST_PES": 1, "HOST_MIPS": 100000, "HOST_RAM": 6000, "HOST_BW": 800000, "HOST_STORAGE": 40000000000 },
-        { "name": "Datacenter13", "hosts": 170, "HOST_PES": 1, "HOST_MIPS": 50000, "HOST_RAM": 4000, "HOST_BW": 600000, "HOST_STORAGE": 30000000000 }
+        { 
+            "name": "Node1", 
+            "hosts": 50, 
+            "cloudlets": 15,
+            "HOST_PES": 128, 
+            "HOST_MIPS": 2000000, 
+            "HOST_RAM": 65536, 
+            "HOST_BW": 5000000, 
+            "HOST_STORAGE": 200000000000,
+            "HOST_START_UP_DELAY": 0.0,
+            "HOST_SHUT_DOWN_DELAY": 0.0,
+            "HOST_START_UP_POWER": 5.0,
+            "HOST_SHUT_DOWN_POWER": 3.0,
+            "STATIC_POWER": 80.0,
+            "MAX_POWER": 800.0
+        },
+        { 
+            "name": "Node2", 
+            "hosts": 55, 
+            "cloudlets": 12,
+            "HOST_PES": 64, 
+            "HOST_MIPS": 1800000, 
+            "HOST_RAM": 60000, 
+            "HOST_BW": 4800000, 
+            "HOST_STORAGE": 190000000000,
+            "HOST_START_UP_DELAY": 0.1,
+            "HOST_SHUT_DOWN_DELAY": 0.1,
+            "HOST_START_UP_POWER": 5.5,
+            "HOST_SHUT_DOWN_POWER": 3.2,
+            "STATIC_POWER": 82.0,
+            "MAX_POWER": 780.0
+        },
+        { 
+            "name": "Node3", 
+            "hosts": 60, 
+            "cloudlets": 14,
+            "HOST_PES": 96, 
+            "HOST_MIPS": 1700000, 
+            "HOST_RAM": 58000, 
+            "HOST_BW": 4600000, 
+            "HOST_STORAGE": 185000000000,
+            "HOST_START_UP_DELAY": 0.2,
+            "HOST_SHUT_DOWN_DELAY": 0.2,
+            "HOST_START_UP_POWER": 6.0,
+            "HOST_SHUT_DOWN_POWER": 3.5,
+            "STATIC_POWER": 85.0,
+            "MAX_POWER": 760.0
+        },
+        { 
+            "name": "Node4", 
+            "hosts": 65, 
+            "cloudlets": 16,
+            "HOST_PES": 80, 
+            "HOST_MIPS": 1600000, 
+            "HOST_RAM": 56000, 
+            "HOST_BW": 4400000, 
+            "HOST_STORAGE": 180000000000,
+            "HOST_START_UP_DELAY": 0.3,
+            "HOST_SHUT_DOWN_DELAY": 0.3,
+            "HOST_START_UP_POWER": 6.5,
+            "HOST_SHUT_DOWN_POWER": 3.8,
+            "STATIC_POWER": 88.0,
+            "MAX_POWER": 740.0
+        },
+        { 
+            "name": "Node5", 
+            "hosts": 70, 
+            "cloudlets": 17,
+            "HOST_PES": 72, 
+            "HOST_MIPS": 1500000, 
+            "HOST_RAM": 54000, 
+            "HOST_BW": 4200000, 
+            "HOST_STORAGE": 175000000000,
+            "HOST_START_UP_DELAY": 0.4,
+            "HOST_SHUT_DOWN_DELAY": 0.4,
+            "HOST_START_UP_POWER": 7.0,
+            "HOST_SHUT_DOWN_POWER": 4.0,
+            "STATIC_POWER": 90.0,
+            "MAX_POWER": 720.0
+        },
+        { 
+            "name": "Node6", 
+            "hosts": 75, 
+            "cloudlets": 18,
+            "HOST_PES": 64, 
+            "HOST_MIPS": 1400000, 
+            "HOST_RAM": 52000, 
+            "HOST_BW": 4000000, 
+            "HOST_STORAGE": 170000000000,
+            "HOST_START_UP_DELAY": 0.5,
+            "HOST_SHUT_DOWN_DELAY": 0.5,
+            "HOST_START_UP_POWER": 7.5,
+            "HOST_SHUT_DOWN_POWER": 4.2,
+            "STATIC_POWER": 92.0,
+            "MAX_POWER": 700.0
+        },
+        { 
+            "name": "Node7", 
+            "hosts": 80, 
+            "cloudlets": 19,
+            "HOST_PES": 56, 
+            "HOST_MIPS": 1300000, 
+            "HOST_RAM": 50000, 
+            "HOST_BW": 3800000, 
+            "HOST_STORAGE": 165000000000,
+            "HOST_START_UP_DELAY": 0.6,
+            "HOST_SHUT_DOWN_DELAY": 0.6,
+            "HOST_START_UP_POWER": 8.0,
+            "HOST_SHUT_DOWN_POWER": 4.5,
+            "STATIC_POWER": 95.0,
+            "MAX_POWER": 680.0
+        },
+        { 
+            "name": "Node8", 
+            "hosts": 85, 
+            "cloudlets": 20,
+            "HOST_PES": 48, 
+            "HOST_MIPS": 1200000, 
+            "HOST_RAM": 48000, 
+            "HOST_BW": 3600000, 
+            "HOST_STORAGE": 160000000000,
+            "HOST_START_UP_DELAY": 0.7,
+            "HOST_SHUT_DOWN_DELAY": 0.7,
+            "HOST_START_UP_POWER": 8.5,
+            "HOST_SHUT_DOWN_POWER": 4.8,
+            "STATIC_POWER": 98.0,
+            "MAX_POWER": 660.0
+        },
+        { 
+            "name": "Node9", 
+            "hosts": 90, 
+            "cloudlets": 21,
+            "HOST_PES": 40, 
+            "HOST_MIPS": 1100000, 
+            "HOST_RAM": 46000, 
+            "HOST_BW": 3400000, 
+            "HOST_STORAGE": 155000000000,
+            "HOST_START_UP_DELAY": 0.8,
+            "HOST_SHUT_DOWN_DELAY": 0.8,
+            "HOST_START_UP_POWER": 9.0,
+            "HOST_SHUT_DOWN_POWER": 5.0,
+            "STATIC_POWER": 100.0,
+            "MAX_POWER": 640.0
+        },
+        { 
+            "name": "Node10", 
+            "hosts": 95, 
+            "cloudlets": 22,
+            "HOST_PES": 32, 
+            "HOST_MIPS": 1000000, 
+            "HOST_RAM": 44000, 
+            "HOST_BW": 3200000, 
+            "HOST_STORAGE": 150000000000,
+            "HOST_START_UP_DELAY": 0.9,
+            "HOST_SHUT_DOWN_DELAY": 0.9,
+            "HOST_START_UP_POWER": 9.5,
+            "HOST_SHUT_DOWN_POWER": 5.2,
+            "STATIC_POWER": 102.0,
+            "MAX_POWER": 620.0
+        },
+        { 
+            "name": "Node11", 
+            "hosts": 85, 
+            "cloudlets": 22,
+            "HOST_PES": 32, 
+            "HOST_MIPS": 1000000, 
+            "HOST_RAM": 44000, 
+            "HOST_BW": 3200000, 
+            "HOST_STORAGE": 150000000000,
+            "HOST_START_UP_DELAY": 0.9,
+            "HOST_SHUT_DOWN_DELAY": 0.9,
+            "HOST_START_UP_POWER": 9.5,
+            "HOST_SHUT_DOWN_POWER": 5.2,
+            "STATIC_POWER": 102.0,
+            "MAX_POWER": 620.0
+        },
+        { 
+            "name": "Node12", 
+            "hosts": 85, 
+            "cloudlets": 22,
+            "HOST_PES": 32, 
+            "HOST_MIPS": 1000000, 
+            "HOST_RAM": 44000, 
+            "HOST_BW": 3200000, 
+            "HOST_STORAGE": 150000000000,
+            "HOST_START_UP_DELAY": 0.9,
+            "HOST_SHUT_DOWN_DELAY": 0.9,
+            "HOST_START_UP_POWER": 9.5,
+            "HOST_SHUT_DOWN_POWER": 5.2,
+            "STATIC_POWER": 102.0,
+            "MAX_POWER": 620.0
+        },
+        { 
+            "name": "Node13", 
+            "hosts": 105, 
+            "cloudlets": 22,
+            "HOST_PES": 32, 
+            "HOST_MIPS": 1000000, 
+            "HOST_RAM": 44000, 
+            "HOST_BW": 3200000, 
+            "HOST_STORAGE": 150000000000,
+            "HOST_START_UP_DELAY": 0.9,
+            "HOST_SHUT_DOWN_DELAY": 0.9,
+            "HOST_START_UP_POWER": 9.5,
+            "HOST_SHUT_DOWN_POWER": 5.2,
+            "STATIC_POWER": 102.0,
+            "MAX_POWER": 620.0
+        }
     ],
 
     "VMS": 130,
     "VM_PES": 4,
     "VM_RAM": 8192,
     "VM_BW": 500000,
-    "VM_STORAGE": 1000000
+    "VM_STORAGE": 1000000,
+
+    "CLOUDLET_LENGTH": 5000000,
+    "CLOUDLET_PES": 4
 }
