--- a/src/main/resources/config3.json
+++ b/src/main/resources/config3.json
@@ -22,7 +22,9 @@
             "cloudlets": 15,
             "cloudlet_spec": {
                 "CLOUDLET_LENGTH": 7000000,
-                "CLOUDLET_PES": 4
+                "CLOUDLET_PES": 4,
+                "FILE_SIZE": 1024,
+                "OUTPUT_SIZE": 1024
             },
             "power_spec": {
                 "HOST_START_UP_DELAY": 0.0,
@@ -53,7 +55,9 @@
             "cloudlets": 12,
             "cloudlet_spec": {
                 "CLOUDLET_LENGTH": 5000000,
-                "CLOUDLET_PES": 2
+                "CLOUDLET_PES": 2,
+                "FILE_SIZE": 1024,
+                "OUTPUT_SIZE": 1024
             },
             "power_spec": {
                 "HOST_START_UP_DELAY": 0.2,
@@ -84,7 +88,9 @@
             "cloudlets": 12,
             "cloudlet_spec": {
                 "CLOUDLET_LENGTH": 500000,
-                "CLOUDLET_PES": 2
+                "CLOUDLET_PES": 2,
+                "FILE_SIZE": 1024,
+                "OUTPUT_SIZE": 1024
             },
             "power_spec": {
                 "HOST_START_UP_DELAY": 0.2,
@@ -115,7 +121,9 @@
             "cloudlets": 12,
             "cloudlet_spec": {
                 "CLOUDLET_LENGTH": 7000000,
-                "CLOUDLET_PES": 2
+                "CLOUDLET_PES": 2,
+                "FILE_SIZE": 1024,
+                "OUTPUT_SIZE": 1024
             },
             "power_spec": {
                 "HOST_START_UP_DELAY": 0.2,
@@ -146,7 +154,9 @@
             "cloudlets": 12,
             "cloudlet_spec": {
                 "CLOUDLET_LENGTH": 2000000,
-                "CLOUDLET_PES": 2
+                "CLOUDLET_PES": 2,
+                "FILE_SIZE": 1024,
+                "OUTPUT_SIZE": 1024
             },
             "power_spec": {
                 "HOST_START_UP_DELAY": 0.2,
@@ -177,7 +187,9 @@
             "cloudlets": 12,
             "cloudlet_spec": {
                 "CLOUDLET_LENGTH": 1000000,
-                "CLOUDLET_PES": 2
+                "CLOUDLET_PES": 2,
+                "FILE_SIZE": 1024,
+                "OUTPUT_SIZE": 1024
             },
             "power_spec": {
                 "HOST_START_UP_DELAY": 0.2,
@@ -208,7 +220,9 @@
             "cloudlets": 12,
             "cloudlet_spec": {
                 "CLOUDLET_LENGTH": 3500000,
-                "CLOUDLET_PES": 2
+                "CLOUDLET_PES": 2,
+                "FILE_SIZE": 1024,
+                "OUTPUT_SIZE": 1024
             },
             "power_spec": {
                 "HOST_START_UP_DELAY": 0.2,
@@ -239,7 +253,9 @@
             "cloudlets": 12,
             "cloudlet_spec": {
                 "CLOUDLET_LENGTH": 5500000,
-                "CLOUDLET_PES": 2
+                "CLOUDLET_PES": 2,
+                "FILE_SIZE": 1024,
+                "OUTPUT_SIZE": 1024
             },
             "power_spec": {
                 "HOST_START_UP_DELAY": 0.2,
@@ -270,7 +286,9 @@
             "cloudlets": 12,
             "cloudlet_spec": {
                 "CLOUDLET_LENGTH": 1200000,
-                "CLOUDLET_PES": 2
+                "CLOUDLET_PES": 2,
+                "FILE_SIZE": 1024,
+                "OUTPUT_SIZE": 1024
             },
             "power_spec": {
                 "HOST_START_UP_DELAY": 0.2,
@@ -301,7 +319,9 @@
             "cloudlets": 12,
             "cloudlet_spec": {
                 "CLOUDLET_LENGTH": 3300000,
-                "CLOUDLET_PES": 2
+                "CLOUDLET_PES": 2,
+                "FILE_SIZE": 1024,
+                "OUTPUT_SIZE": 1024
             },
             "power_spec": {
                 "HOST_START_UP_DELAY": 0.2,
@@ -332,7 +352,9 @@
             "cloudlets": 12,
             "cloudlet_spec": {
                 "CLOUDLET_LENGTH": 5000000,
-                "CLOUDLET_PES": 2
+                "CLOUDLET_PES": 2,
+                "FILE_SIZE": 1024,
+                "OUTPUT_SIZE": 1024
             },
             "power_spec": {
                 "HOST_START_UP_DELAY": 0.2,
@@ -363,7 +385,9 @@
             "cloudlets": 12,
             "cloudlet_spec": {
                 "CLOUDLET_LENGTH": 5000000,
-                "CLOUDLET_PES": 2
+                "CLOUDLET_PES": 2,
+                "FILE_SIZE": 1024,
+                "OUTPUT_SIZE": 1024
             },
             "power_spec": {
                 "HOST_START_UP_DELAY": 0.2,
@@ -394,7 +418,9 @@
             "cloudlets": 12,
             "cloudlet_spec": {
                 "CLOUDLET_LENGTH": 5000000,
-                "CLOUDLET_PES": 2
+                "CLOUDLET_PES": 2,
+                "FILE_SIZE": 1024,
+                "OUTPUT_SIZE": 1024
             },
             "power_spec": {
                 "HOST_START_UP_DELAY": 0.2,
