--- a/src/main/resources/config4.json
+++ b/src/main/resources/config4.json
@@ -22,7 +22,9 @@
             "cloudlets": 500,
             "cloudlet_spec": {
                 "CLOUDLET_LENGTH": 7500000,
-                "CLOUDLET_PES": 4
+                "CLOUDLET_PES": 4,
+                "FILE_SIZE": 1024,
+                "OUTPUT_SIZE": 1024
             },
             "power_spec": {
                 "HOST_START_UP_DELAY": 0.0,
